chore: fix modal z-index and tweaks to search component

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,9 +13,6 @@
     display: none;
   }
 }
-.menu-logo {
-  max-width: 30px;
-}
 .menu-main:hover {
   color: #007bd9 !important;
 }
