--- a/assets/css/modals.scss
+++ b/assets/css/modals.scss
@@ -4,7 +4,7 @@
 /* The Modal (background) */
 .modal {
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
