--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -2,7 +2,7 @@
   position: absolute;
   font-family: inherit;
   font-size: inherit;
-  top: 65px;
+  top: 92px;
   left: 0;
   background-color: #ffffff;
   width: 100%;
